--- a/src/app/producto-lista/producto-lista.component.html
+++ b/src/app/producto-lista/producto-lista.component.html
@@ -1,3 +1,26 @@
 <div class="container">
-    <h3>Sistema de inventarios</h3>
-  </div>
+    <div class="container text-center" style="margin: 30px;">
+        <h3>Sistema de inventarios</h3>
+    </div>
+
+    <table class="table table-striped table-hover align-middle">
+        <thead class="table-dark">
+            <tr>
+                <th scope="col">Id</th>
+                <th scope="col">Descripcion</th>
+                <th scope="col">precio</th>
+                <th scope="col">Existencias</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let producto of productos">
+                <th scope="row">{{producto.idProducto}}</th>
+                <td>{{producto.descripcion}}</td>
+                <td>{{producto.precio}}</td>
+                <td>{{producto.existencia}}</td>
+            </tr>
+
+        </tbody>
+    </table>
+
+</div>
